--- a/Practice python.ipynb
+++ b/Practice python.ipynb
@@ -412,7 +412,17 @@
    "id": "5833b94d-a127-4496-8427-c9e3d1e8722b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "    def groupAnagrams(self, strs: List[str]) -> List[List[str]]:\n",
+    "        ans = collections.defaultdict(list)\n",
+    "\n",
+    "        for s in strs:\n",
+    "            count = [0] * 26\n",
+    "            for c in s:\n",
+    "                count[ord(c) - ord(\"a\")] += 1\n",
+    "            ans[tuple(count)].append(s)\n",
+    "        return ans.values()"
+   ]
   }
  ],
  "metadata": {
