added practice question

--- a/Practice blind 75.ipynb
+++ b/Practice blind 75.ipynb
@@ -397,8 +397,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5833b94d-a127-4496-8427-c9e3d1e8722b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[-3, 1, 2]]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "    def threeSum(nums):\n",
+    "        res = []\n",
+    "        nums.sort()\n",
+    "\n",
+    "        for i, a in enumerate(nums):\n",
+    "            # Skip positive integers\n",
+    "            if a > 0:\n",
+    "                break\n",
+    "\n",
+    "            if i > 0 and a == nums[i - 1]:\n",
+    "                continue\n",
+    "\n",
+    "            l, r = i + 1, len(nums) - 1\n",
+    "            while l < r:\n",
+    "                threeSum = a + nums[l] + nums[r]\n",
+    "                if threeSum > 0:\n",
+    "                    r -= 1\n",
+    "                elif threeSum < 0:\n",
+    "                    l += 1\n",
+    "                else:\n",
+    "                    res.append([a, nums[l], nums[r]])\n",
+    "                    l += 1\n",
+    "                    r -= 1\n",
+    "                    while nums[l] == nums[l - 1] and l < r:\n",
+    "                        l += 1\n",
+    "                        \n",
+    "        return res\n",
+    "nums = [-3,3,4,-3,1,2]\n",
+    "threeSum(nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "beaa9be6",
    "metadata": {},
    "outputs": [],
    "source": []
