--- a/Practice blind 75.ipynb
+++ b/Practice blind 75.ipynb
@@ -447,11 +447,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "beaa9be6",
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "object of type 'int' has no len()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 13\u001b[0m\n\u001b[0;32m     10\u001b[0m                 r \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     12\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m res\n\u001b[1;32m---> 13\u001b[0m maxArea(\u001b[38;5;241m23\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[6], line 2\u001b[0m, in \u001b[0;36mmaxArea\u001b[1;34m(height)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmaxArea\u001b[39m(height):\n\u001b[1;32m----> 2\u001b[0m         l, r \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m, \u001b[38;5;28mlen\u001b[39m(height) \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m      3\u001b[0m         res \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m      5\u001b[0m         \u001b[38;5;28;01mwhile\u001b[39;00m l \u001b[38;5;241m<\u001b[39m r:\n",
+      "\u001b[1;31mTypeError\u001b[0m: object of type 'int' has no len()"
+     ]
+    }
+   ],
+   "source": [
+    "def maxArea(height):\n",
+    "        l, r = 0, len(height) - 1\n",
+    "        res = 0\n",
+    "\n",
+    "        while l < r:\n",
+    "            res = max(res, min(height[l], height[r]) * (r - l))\n",
+    "            if height[l] < height[r]:\n",
+    "                l += 1\n",
+    "            elif height[r] <= height[l]:\n",
+    "                r -= 1\n",
+    "            \n",
+    "        return res\n",
+    "maxArea(23)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab6a7d79",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def maxArea(self, height: List[int]) -> int:\n",
+    "        l, r = 0, len(height) - 1\n",
+    "        res = 0\n",
+    "\n",
+    "        while l < r:\n",
+    "            res = max(res, min(height[l], height[r]) * (r - l))\n",
+    "            if height[l] < height[r]:\n",
+    "                l += 1\n",
+    "            elif height[r] <= height[l]:\n",
+    "                r -= 1\n",
+    "            \n",
+    "        return res\n"
+   ]
   }
  ],
  "metadata": {
