--- a/Practice blind 75.ipynb
+++ b/Practice blind 75.ipynb
@@ -501,6 +501,29 @@
     "            \n",
     "        return res\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "879a031d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def isValid(self, s: str) -> bool:\n",
+    "        Map = {\")\": \"(\", \"]\": \"[\", \"}\": \"{\"}\n",
+    "        stack = []\n",
+    "\n",
+    "        for c in s:\n",
+    "            if c not in Map:\n",
+    "                stack.append(c)\n",
+    "                continue\n",
+    "            if not stack or stack[-1] != Map[c]:\n",
+    "                return False\n",
+    "            stack.pop()\n",
+    "\n",
+    "        return not stack\n"
+   ]
   }
  ],
  "metadata": {
