--- a/Practice blind 75.ipynb
+++ b/Practice blind 75.ipynb
@@ -524,6 +524,25 @@
     "\n",
     "        return not stack\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15fd904e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def carFleet(self, target: int, position: List[int], speed: List[int]) -> int:\n",
+    "        pair = [(p, s) for p, s in zip(position, speed)]\n",
+    "        pair.sort(reverse=True)\n",
+    "        stack = []\n",
+    "        for p, s in pair:  # Reverse Sorted Order\n",
+    "            stack.append((target - p) / s)\n",
+    "            if len(stack) >= 2 and stack[-1] <= stack[-2]:\n",
+    "                stack.pop()\n",
+    "        return len(stack)\n"
+   ]
   }
  ],
  "metadata": {
