--- a/Practice blind 75.ipynb
+++ b/Practice blind 75.ipynb
@@ -543,6 +543,25 @@
     "                stack.pop()\n",
     "        return len(stack)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c88fe798",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "    def reverseList( ListNode) -> ListNode:\n",
+    "        prev, curr = None, head\n",
+    "\n",
+    "        while curr:\n",
+    "            temp = curr.next\n",
+    "            curr.next = prev\n",
+    "            prev = curr\n",
+    "            curr = temp\n",
+    "        return prev"
+   ]
   }
  ],
  "metadata": {
