--- a/Practice blind 75.ipynb
+++ b/Practice blind 75.ipynb
@@ -562,6 +562,24 @@
     "            curr = temp\n",
     "        return prev"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ede95ae9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def maxProfit(self, prices: List[int]) -> int:\n",
+    "        res = 0\n",
+    "        \n",
+    "        lowest = prices[0]\n",
+    "        for price in prices:\n",
+    "            if price < lowest:\n",
+    "                lowest = price\n",
+    "            res = max(res, price - lowest)\n",
+    "        return res"
+   ]
   }
  ],
  "metadata": {
