--- a/Practice blind 75.ipynb
+++ b/Practice blind 75.ipynb
@@ -487,8 +487,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Solution:\n",
-    "    def maxArea(self, height: List[int]) -> int:\n",
+    "\n",
+    "    def maxArea( height):\n",
     "        l, r = 0, len(height) - 1\n",
     "        res = 0\n",
     "\n",
@@ -509,8 +509,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Solution:\n",
-    "    def isValid(self, s: str) -> bool:\n",
+    "\n",
+    "def isValid( s) :\n",
     "        Map = {\")\": \"(\", \"]\": \"[\", \"}\": \"{\"}\n",
     "        stack = []\n",
     "\n",
@@ -532,8 +532,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Solution:\n",
-    "    def carFleet(self, target: int, position: List[int], speed: List[int]) -> int:\n",
+    "def carFleet(target, position, speed) :\n",
     "        pair = [(p, s) for p, s in zip(position, speed)]\n",
     "        pair.sort(reverse=True)\n",
     "        stack = []\n",
@@ -552,7 +551,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "    def reverseList( ListNode) -> ListNode:\n",
+    "def reverseList( ListNode):\n",
     "        prev, curr = None, head\n",
     "\n",
     "        while curr:\n",
@@ -570,7 +569,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def maxProfit(self, prices: List[int]) -> int:\n",
+    "def maxProfit( prices) :\n",
     "        res = 0\n",
     "        \n",
     "        lowest = prices[0]\n",
@@ -579,6 +578,24 @@
     "                lowest = price\n",
     "            res = max(res, price - lowest)\n",
     "        return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66d46057",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hasCycle( ListNode):\n",
+    "        slow, fast = head, head\n",
+    "\n",
+    "        while fast and fast.next:\n",
+    "            slow = slow.next\n",
+    "            fast = fast.next.next\n",
+    "            if slow == fast:\n",
+    "                return True\n",
+    "        return False"
    ]
   }
  ],
