--- a/Practice blind 75.ipynb
+++ b/Practice blind 75.ipynb
@@ -597,6 +597,42 @@
     "                return True\n",
     "        return False"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8931394b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def threeSum( nums) :\n",
+    "        res = []\n",
+    "        nums.sort()\n",
+    "\n",
+    "        for i, a in enumerate(nums):\n",
+    "            # Skip positive integers\n",
+    "            if a > 0:\n",
+    "                break\n",
+    "\n",
+    "            if i > 0 and a == nums[i - 1]:\n",
+    "                continue\n",
+    "\n",
+    "            l, r = i + 1, len(nums) - 1\n",
+    "            while l < r:\n",
+    "                threeSum = a + nums[l] + nums[r]\n",
+    "                if threeSum > 0:\n",
+    "                    r -= 1\n",
+    "                elif threeSum < 0:\n",
+    "                    l += 1\n",
+    "                else:\n",
+    "                    res.append([a, nums[l], nums[r]])\n",
+    "                    l += 1\n",
+    "                    r -= 1\n",
+    "                    while nums[l] == nums[l - 1] and l < r:\n",
+    "                        l += 1\n",
+    "                        \n",
+    "        return res"
+   ]
   }
  ],
  "metadata": {
