--- a/Practice blind 75.ipynb
+++ b/Practice blind 75.ipynb
@@ -633,6 +633,27 @@
     "                        \n",
     "        return res"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bee24008",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def twoSum( numbers target):\n",
+    "        l, r = 0, len(numbers) - 1\n",
+    "\n",
+    "        while l < r:\n",
+    "            curSum = numbers[l] + numbers[r]\n",
+    "\n",
+    "            if curSum > target:\n",
+    "                r -= 1\n",
+    "            elif curSum < target:\n",
+    "                l += 1\n",
+    "            else:\n",
+    "                return [l + 1, r + 1]"
+   ]
   }
  ],
  "metadata": {
