--- a/Practice blind 75.ipynb
+++ b/Practice blind 75.ipynb
@@ -654,6 +654,44 @@
     "            else:\n",
     "                return [l + 1, r + 1]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fc428eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def findMedianSortedArrays( nums1 nums2):\n",
+    "        A, B = nums1, nums2\n",
+    "        total = len(nums1) + len(nums2)\n",
+    "        half = total // 2\n",
+    "\n",
+    "        if len(B) < len(A):\n",
+    "            A, B = B, A\n",
+    "\n",
+    "        l, r = 0, len(A) - 1\n",
+    "        while True:\n",
+    "            i = (l + r) // 2  # A\n",
+    "            j = half - i - 2  # B\n",
+    "\n",
+    "            Aleft = A[i] if i >= 0 else float(\"-infinity\")\n",
+    "            Aright = A[i + 1] if (i + 1) < len(A) else float(\"infinity\")\n",
+    "            Bleft = B[j] if j >= 0 else float(\"-infinity\")\n",
+    "            Bright = B[j + 1] if (j + 1) < len(B) else float(\"infinity\")\n",
+    "\n",
+    "            # partition is correct\n",
+    "            if Aleft <= Bright and Bleft <= Aright:\n",
+    "                # odd\n",
+    "                if total % 2:\n",
+    "                    return min(Aright, Bright)\n",
+    "                # even\n",
+    "                return (max(Aleft, Bleft) + min(Aright, Bright)) / 2\n",
+    "            elif Aleft > Bright:\n",
+    "                r = i - 1\n",
+    "            else:\n",
+    "                l = i + 1"
+   ]
   }
  ],
  "metadata": {
